# level_up

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  celerybeat-schedule  pyproject.toml  requirements.txt  test-req.txt
backend/accounts/: admin.py  managers.py  models.py  serializers.py  signals.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/ai_app/: admin.py  ai_views.py  backuping.py  gemni_ai.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/ai_app/migrations/: 0001_initial.py
backend/ai_chatbot/: admin.py  models.py  serializers.py  urls.py  views.py
backend/ai_chatbot/migrations/: 0001_initial.py
backend/backend_site/: asgi.py  celery.py  middleware.py  serializers.py  settings.py  urls.py
backend/chat/: admin.py  api.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_remove_notification_conversation_and_more.py
backend/custom_admin/: serializers.py  urls.py  views.py
backend/payments/: admin.py  models.py  razor_pay.py  serializers.py  tasks.py  urls.py  views.py
backend/payments/migrations/: 0001_initial.py
backend/search/: serializers.py  urls.py  views.py
backend/streaks/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/streaks/migrations/: 0001_initial.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.js.timestamp-1729698443322-940240d65f3d28.mjs
frontend/src/: AdminNavigationCard.jsx  App.jsx  index.css  main.jsx
frontend/src/Components/: BadgesSection.jsx  Card.jsx  CreateGroups.jsx  DailyTask.jsx  Editor.jsx  FeedbackComponent.jsx  Footer.jsx  FriendButtons.jsx  FriendList.jsx  FriendRequests.jsx  HeroSection.jsx  LoginComponent.jsx  LogoutButton.jsx  Navbar.jsx  NavigationCard.jsx  Pricing.jsx  ProfileEditModal.jsx  ProfilePageTop.jsx  Profilefromyoutube.jsx  QuestionComponent.jsx  SalesSection.jsx  SearchUsers.jsx  StatsCard.jsx  Svgs.jsx  Testimonials.jsx  UserLists.jsx  WebCamComponent.jsx  WithAurora.jsx  WobbleCardSection.jsx
frontend/src/Components/ui/: Hero-highlight.jsx  MagicButton.jsx  Wobble-card.jsx  infinite-moving-component.jsx
frontend/src/HOC/: Layout.jsx  ProtectedRoutes.jsx
frontend/src/app/: store.js
frontend/src/features/AiMockinterview/: interviewSlice.js
frontend/src/features/LeetCode/: LeetcodeSlice.js
frontend/src/features/authentication/: AuthSlice.js  ProfileSlice.js  previousauthslice.txt
frontend/src/features/customAdmin/: customAdminSlice.js
frontend/src/features/friends/: FriendSlice.js
frontend/src/lib/: array-utils.js
frontend/src/pages/: AIChatBot.jsx  AddBadges.jsx  AdminLogin.jsx  AiMockInterview.jsx  AiQuiz.jsx  AiQuizCreation.jsx  AiQuizScore.jsx  AiQuizStart.jsx  AiinterviewFeedback.jsx  Badges.jsx  ChangePassword.jsx  Chats.jsx  EmailVerification.jsx  GroupChats.jsx  GroupMessages.jsx  GroupSettings.jsx  Home.jsx  Inbox.jsx  InterviewStart.jsx  LeaderBoard.jsx  LeetCodeList.jsx  LeetCodedetails.jsx  LeetcodeSubmission.jsx  Login.jsx  Payment.jsx  Profile.jsx  ResetPassword.jsx  ResetPasswordConfirm.jsx  Signup.jsx  Subscribers.jsx  TestPage.jsx  UsersProfile.jsx  adminDashboard.jsx
nginx/: nginx.conf
